Minor radio buttons and checkbox style adjustments to accommodate the latest versions of dash and plotly.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -70,8 +70,7 @@ body {
     width: 80%;
     background-color: #F5F5F5;
     margin-bottom: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px;
     border-radius: 10px;
 }
 
